Acceleration working. First pass.